--- a/style.css
+++ b/style.css
@@ -5,3 +5,71 @@
     color: white;
     font-weight: 600;
 }
+
+.popup-container {
+    position: relative;
+    padding: 20px; 
+  }
+  
+  .close-button {
+    position: absolute;
+    top: 10px; 
+    right:105px; 
+    cursor: pointer;
+    font-size: 16px;
+    border: none;
+  }
+
+  .photo-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.photo-container {
+    position: relative;
+    text-align: center;
+}
+
+.photo-popup-image {
+    max-width: 90vw;
+    max-height: 90vh;
+    object-fit: contain;
+}
+
+.nav-button {
+    position: absolute;
+    top: 50%;
+    font-size: 24px;
+    background: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.prev {
+    left: 10px;
+    transform: translateY(-50%);
+}
+
+.next {
+    right: 10px;
+    transform: translateY(-50%);
+}
+
+/* Thumbnail photo inside InfoWindow */
+.thumbnail-photo {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin: 5px;
+    cursor: pointer;
+}
